fix: li allineati con text-align e line-height

--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,9 @@ body #list {
   justify-content: center;
 }
 
-.element-display-flex {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.element-align {
+  text-align: center;
+  line-height: 160px;
 }
 
 .flex-wrap {
